# Software-systems-lab

./: Q2.py  README.md
180050005-180050095-18D070026-outlab1/Task1/: isPrimeYear.sh
180050005-180050095-18D070026-outlab1/Task3/: helpGroupTheCsv.sh
180050005-180050095-18D070026-outlab1/Task5/: recursiveSearch.sh
180050005-180050095-18D070026-outlab3/: Q1.py  Q2.py  Q3.py  Q4.py  Q5.py  references.txt
Dominatrix-outlab7/: average_balls.py  average_runs.py  create_tables.py  hitman.py  insert.py  prep_stmt.py  sql_injection.py  trueorfalse.txt  win_chance.py
Dominatrix-outlab8/: BasicClient.java  BasicServer.java  FetchAndProcess.java  FetchAndProcessFromNetwork.java  FetchAndProcessFromNetworkFast.java  MultiServer.java  commands.txt  commands2.txt
Dominatrix-outlab9/: planner-repo.tar  planner.apk
outlab10-Dominatrix/q1/: Beamer.tex
outlab10-Dominatrix/q2/: diagram.tex
outlab2-Dominatrix/: references.txt
outlab2-Dominatrix/Task3/: calculateCPI.sh  calculateSPI.sh  viewCourse.sh  viewSemester.sh  viewWithColor.sh  viewWithoutColor.awk
outlab4-Dominatrix/Task1/: task1.py
outlab4-Dominatrix/Task2/: task2.py  utils.py
outlab4-Dominatrix/Task3/: task3.py
outlab4-Dominatrix/Task4/: driver.py  task4.py
outlab4-Dominatrix/Task5/: task5.py
outlab5-Dominatrix/q1/: outlab5-Dominatrix.aux  outlab5-Dominatrix.out  outlab5-Dominatrix.tex  outlab5-Dominatrix.toc
outlab5-Dominatrix/q5/: Makefile
outlab5-Dominatrix/q6/: CMakeLists.txt  rawmake
outlab5-Dominatrix/q6/mygame/: CMakeLists.txt
recyclerCard/: settings.gradle
(+91 files in other folders)
